# robertbeverly_com

./: CLAUDE.md  Cargo.toml  README.md  humans.txt  index.html  site.webmanifest
css/: main.css
src/: lib.rs
www/: humans.txt  index.html  index.js  style.css
www/pkg/: conway_wasm.d.ts  conway_wasm.js  conway_wasm_bg.wasm  conway_wasm_bg.wasm.d.ts  package.json
www/widgets/: biotron.css  biotron.html  grid-test.css  grid-test.html  retrotron.css  retrotron.html  retrotron.js
